# zeta-machine

./: CMakeLists.txt
src/: call_stack.cpp  call_stack.h  instructions.h  machine.cpp  machine.h  main.cpp  memory.cpp  memory.h  processor.cpp  processor.h  random_number_generator.cpp  random_number_generator.h  timer.cpp  timer.h  video.h
src/memory/: dictionary_mapper.cpp  dictionary_mapper.h  header.cpp  header.h  memory.cpp  memory.h  memory_cursor.cpp  memory_cursor.h  object_mapper.cpp  object_mapper.h  zchar_mapper.cpp  zchar_mapper.h
